<resources>
    <string name="app_name">SpaceXAssignment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="Home_fragment_label">Home Fragment</string>
    <string name="Store_fragment_label">Store Fragment</string>
    <string name="Search_fragment_label">Search Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mission_name">Mission Name: %1$s</string>
    <string name="launch_year">Launch Year: %1$s</string>
    <string name="rocket_name">Rocket Name: %1$s</string>
    <string name="launch_site">Launch Site: %1$s</string>
    <string name="payload_details">Payload Details: %1$s</string>
    <string name="rocket_details">Rocket Details: %1$s</string>
    <string name="launch_date">Launch Date: %1$s</string>
    <string name="launch_details">Launch Details: %1$s</string>
    <string name="links_amp_media">Links &amp; Media: <a href="%1$s">%2$s</a></string>

</resources>