<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/missionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/launchYear"
        android:text="@string/launch_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/rocketName"
        android:text="@string/rocket_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>